[package]

name = "logistics"
version = "0.0.3"
authors = ["chrispryer"]
license = "MIT"
description = "Logistics Engineering Client"
repository = "https://github.com/andromia/logistics.git"
homepage = "https://github.com/andromia/logistics.git"
readme = "README.md"
keywords = [
    "logistics",
    "modeling",
    "optimization",
    "solver"
]
categories = [
    "science", 
    "mathematics",
]
exclude = [".vscode/", "Vagrantfile", "vm-bootstrap.sh"]

[package.metadata.docs.rs]
features = ["std"]

[dependencies]
solver = "0.0.2"
